--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,10 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<script>
-            
-		</script>
+        <script src="https://d3js.org/d3.v5.js"></script>
 	</head>
 	<body>
-
-    </body>
+		<div id="ps"></div>
+		<script src="./index.js"></script>
+	</body>
 </html>
